--- a/src/main/webapp/inward/inward_room_vacant.xhtml
+++ b/src/main/webapp/inward/inward_room_vacant.xhtml
@@ -27,6 +27,7 @@
                     value="#{roomOccupancyController.roomFacilityCharges}" 
                     var="pr"
                     paginator="true"
+                    paginatorPosition="bottom"
                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                     rowsPerPageTemplate="5,10,15" class="mt-3"
                     >
