--- a/src/main/webapp/opd_search_pre_bill.xhtml
+++ b/src/main/webapp/opd_search_pre_bill.xhtml
@@ -20,14 +20,26 @@
                             <div class="col-2">
                                 <h:panelGrid columns="1">
                                     <h:outputLabel value="From Date"/>
-                                    <p:calendar class="my-1 w-100" id="fromDate" value="#{searchController.fromDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                                    <p:calendar
+                                        class="my-1 w-100" 
+                                        id="fromDate" 
+                                        value="#{searchController.fromDate}" 
+                                        navigator="false"
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}"
+                                        maxdate="#{commonFunctionsController.endOfDay}">      
                                     </p:calendar>
                                     <h:outputLabel value="To Date"/>
-                                    <p:calendar class="my-1 w-100" id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                                    <p:calendar
+                                        class="my-1 w-100" 
+                                        id="toDate" 
+                                        value="#{searchController.toDate}" 
+                                        navigator="false" 
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}"
+                                        maxdate="#{commonFunctionsController.endOfDay}">                                                                              
                                     </p:calendar>
                                     <p:commandButton  id="btnSearch" icon="fas fa-search" class="ui-button-success w-100" ajax="false" value="Search All" action="#{searchController.createOpdPreTable}"/>
-                                    <p:commandButton class="my-1 ui-button-warning w-100" icon=" fas fa-times" ajax="false" value="Not Paid Only" action="#{searchController.createOpdPreTableNotPaid}"/>
-                                    <p:commandButton  ajax="false" icon="fas fa-check" class="ui-button-warning w-100 " value="Paid Only" action="#{searchController.createOpdPreTablePaid}"/>
+                                    <p:commandButton class="my-1 ui-button-warning w-100" icon="fas fa-search" ajax="false" value="Search Not Paid Only" action="#{searchController.createOpdPreTableNotPaid}"/>
+                                    <p:commandButton  ajax="false" icon="fas fa-search" class="ui-button-warning w-100 " value="Search Paid Only" action="#{searchController.createOpdPreTablePaid}"/>
 
                                 </h:panelGrid>
                             </div>
@@ -75,7 +87,7 @@
                                         <h:outputLabel value="#{bill.department.name}"  ></h:outputLabel>
                                     </p:column> 
 
-                                    <p:column headerText="Billed at"  >
+                                    <p:column headerText="Billed At"  >
                                         <h:outputLabel value="#{bill.createdAt}" >
                                             <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
                                         </h:outputLabel>
@@ -88,7 +100,7 @@
                                             </h:outputLabel>
                                         </h:panelGroup>                             
                                     </p:column>                 
-                                    <p:column headerText="Billed by" >
+                                    <p:column headerText="Billed By" >
                                         <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
                                         </h:outputLabel>
                                         <br/>
@@ -113,7 +125,7 @@
                                         </p:commandButton>
                                     </p:column>
 
-                                    <p:column>
+                                    <p:column style="width: 450px">
                                         <p:dataTable value="#{bill.cashBillsOpdPre}" var="rb">
                                             <p:column  >                                                               
                                                 <h:outputLabel  value="#{rb.deptId}"/>                                   
