--- a/src/main/webapp/pharmacy/pharmacy_search_pre_refund_bill_for_return_cash.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_search_pre_refund_bill_for_return_cash.xhtml
@@ -19,11 +19,21 @@
                             <div class="col-2">
                                 <h:panelGrid columns="1" >
                                     <h:outputLabel value="From Date"/>
-                                    <p:calendar styleClass="dateTimePicker" id="fromDate" value="#{searchController.fromDate}"
-                                                navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >      
+                                    <p:calendar 
+                                        styleClass="dateTimePicker"
+                                        id="fromDate"
+                                        value="#{searchController.fromDate}"
+                                        navigator="false"
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}"
+                                        maxdate="#{commonFunctionsController.endOfDay}">      
                                     </p:calendar>
                                     <h:outputLabel value="To Date"/>
-                                    <p:calendar id="toDate" value="#{searchController.toDate}" navigator="false" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" >                                                                              
+                                    <p:calendar 
+                                        id="toDate"
+                                        value="#{searchController.toDate}"
+                                        navigator="false"
+                                        pattern="#{sessionController.applicationPreference.longDateTimeFormat}" 
+                                        maxdate="#{commonFunctionsController.endOfDay}">                                                                              
                                     </p:calendar>
                                     <p:commandButton class="w-100 ui-button-success" id="btnSearch" ajax="false" value="Search" action="#{searchController.createPreRefundTable}"/>
 
@@ -56,7 +66,7 @@
                                     <p:column headerText="Pre Bill No"  >
                                         <h:outputLabel value="#{bill.deptId}"  />
                                     </p:column>     
-                                    <p:column headerText="Billed at"  >
+                                    <p:column headerText="Billed At"  >
                                         <h:outputLabel value="#{bill.createdAt}" >
                                             <f:convertDateTime  timeZone="Asia/Colombo" pattern="#{sessionController.applicationPreference.longDateTimeFormat}" />
                                         </h:outputLabel>
@@ -69,7 +79,7 @@
                                             </h:outputLabel>
                                         </h:panelGroup>                             
                                     </p:column>                 
-                                    <p:column headerText="Billed by" >
+                                    <p:column headerText="Billed By" >
                                         <h:outputLabel value="#{bill.creater.webUserPerson.name}" >                                      
                                         </h:outputLabel>
                                         <br/>
