--- a/src/main/webapp/inward/inward_search_service.xhtml
+++ b/src/main/webapp/inward/inward_search_service.xhtml
@@ -57,7 +57,7 @@
                             <p:dataTable id="tblBills" 
                                          value="#{searchController.bills}" 
                                          var="bill"
-                                         emptyMessage="No Bills Found"
+                                         emptyMessage="No records found"
                                          rowKey="#{bill.id}"
                                          paginator="true"
                                          rows="10"
