Signed-off-by: DamithDeshan <hkddrajapaksha@gmail.com>

--- a/src/main/webapp/opd/patient_edit.xhtml
+++ b/src/main/webapp/opd/patient_edit.xhtml
@@ -61,7 +61,7 @@
 
                                 </f:facet>
                                 <div class="container-fluid">
-                                    <div class="row form-group">
+                                    <div class="row form-group mb-1">
                                         <div class="col-md-2">
                                             <p:outputLabel value="Title:"  class="form-label" />
                                             <p:selectOneMenu id="cmbTitle" value="#{patientController.current.person.title}" class="form-control" required="true" requiredMessage="Please Select a title">
@@ -84,11 +84,11 @@
                                                 validatorMessage="Please enter only letters and spaces."
                                                 requiredMessage="Please Enter a name" 
                                                 >
-                                                <f:validateRegex pattern="^[a-zA-Z\s]*$" />
+                                                <f:validateRegex pattern="^[a-zA-Z\s'.]+$" />
                                             </p:inputText>
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+                                    <div class="row form-group mb-1">
                                         <div class="col-md-2">
                                             <p:outputLabel value="Sex:"  class="form-label" />
                                             <p:selectOneMenu id="somSex" value="#{patientController.current.person.sex}" class="form-control" >
@@ -128,18 +128,38 @@
                                             </p:datePicker>
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+                                    <div class="row form-group mb-1">
                                         <div class="col-md-3">
                                             <p:outputLabel value="Phone:"  class="form-label" />
-                                            <p:inputText value="#{patientController.current.person.phone}" class="form-control" />
+                                            <p:inputText 
+                                                value="#{patientController.current.person.phone}" 
+                                                class="form-control" 
+                                                validatorMessage="Please enter Valid Phone Number."
+                                                >
+                                                <f:validateRegex pattern="^$|^[0-9+\s-]+$"/>
+                                            </p:inputText>
+                                            
                                         </div>
                                         <div class="col-md-3">
                                             <p:outputLabel value="Mobile:"  class="form-label" />
-                                            <p:inputText value="#{patientController.current.person.mobile}" class="form-control" />
+                                            <p:inputText 
+                                                value="#{patientController.current.person.mobile}" 
+                                                class="form-control" 
+                                                validatorMessage="Please enter Valid Mobile Number."
+                                                >
+                                                <f:validateRegex pattern="^$|^[0-9+\s-]+$"/>
+                                            </p:inputText>
+                                            
                                         </div>
                                         <div class="col-md-3">
                                             <p:outputLabel value="Email:"  class="form-label" />
-                                            <p:inputText value="#{patientController.current.person.email}" class="form-control" />
+                                            <p:inputText 
+                                                value="#{patientController.current.person.email}" 
+                                                class="form-control"
+                                                validatorMessage="Please enter Valid Email."
+                                                >
+                                                <f:validateRegex pattern="^$|^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" />
+                                            </p:inputText>
                                         </div>
                                         <div class="col-md-3">
                                             <h:outputLabel class="form-label" value="NIC No:" />
@@ -148,13 +168,13 @@
                                             </h:panelGroup>
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+                                    <div class="row form-group mb-1">
                                         <div class="col-md-12">
                                             <p:outputLabel value="Address:"  class="form-label" />
                                             <p:inputText value="#{patientController.current.person.address}" style="width: 100%;" class="form-control" />
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+                                    <div class="row form-group mb-1">
                                         <div class="col-md-6">
                                             <p:outputLabel value="PHN Number:"  class="form-label" />
                                             <p:inputText value="#{patientController.current.phn}" class="form-control" />
@@ -166,13 +186,13 @@
                                             </h:panelGroup>
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+                                    <div class="row form-group mb-1">
                                         <div class="col-md-12">
                                             <p:outputLabel value="Comments:"  class="form-label" />
                                             <p:inputText value="#{patientController.current.comments}" style="width: 100%;" class="form-control" />
                                         </div>
                                     </div>
-                                    <div class="row form-group">
+                                    <div class="row form-group ">
                                         <div class="col-md-6">
                                             <p:outputLabel value="Patient Account:"  class="form-label w-100" />
                                             <p:selectBooleanButton value="#{patientController.current.hasAnAccount}"
